# comment-service

./: Dockerfile  Makefile  README.md  justfile  pyproject.toml
.github/workflows/: lint-and-test.yml
.just/: common.just
configs/: dev.yaml  prod.yaml
db/: schema.sql
db/migrations/: 20250929000000_init_comments.sql
migrations/: 20250929000000_init_comments.sql  20251114232657_migrations_create_comments_table.sql
src/commentservice/: constants.py  server.py  settings.py
src/commentservice/clients/: moderation_service.py
src/commentservice/db/: connection.py
src/commentservice/grpc/: comment_pb2.py  comment_pb2.pyi  comment_pb2_grpc.py  moderation_pb2.py  moderation_pb2.pyi  moderation_pb2_grpc.py
src/commentservice/handler/: create_comment.py  delete_comment.py  delete_comments.py  edit_comment.py  get_comments.py  handler.py  set_status.py
src/commentservice/kafka/: config.py  consumer.py  moderaiton_service.py  producer.py
src/commentservice/repository/: create_comment.py  delete_comment.py  edit_comment.py  get_comments.py  model.py  repository.py  set_status.py  statuses.py  update_comment_status.py
tests/handler/: test_create_comment.py  test_delete_comment.py  test_edit_comment.py  test_get_comments.py  test_handler.py  test_set_status.py
tests/repository/: test_create_comment.py  test_delete_comment.py  test_edit_comment.py  test_get_comments.py  test_set_status.py
tests/service/: test_create_comment.py  test_delete_comment.py  test_edit_comment.py  test_get_comments.py  test_set_status.py
tools/: common.just
(+9 files in other folders)
